// Copyright (c) 2019 Cisco and/or its affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at:
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package model;

// SaseConfig is used to store definition of a sase config as a k8s CRD resource.
message SaseConfig {
    // Name of the SaseConfig
    string name = 1;

    // Sase Service Instance Name
    string service_instance_name = 2;

    // Sase Rule Direction
    enum Direction {
        None = 0;
        Ingress = 1;
        Egress = 2;
    }
    // Sase Rule Direction
    Direction direction = 3;

    // Sase Rule Match Attribute.
    message Match {
        // source interface name 
        string src_interface_name = 1;

        // destination interface name 
        string dst_interface_name = 2;

        // source mac address 
        string source_mac = 3;

        // source ip address
        string source_ip = 4;

        // destination mac address 
        string destination_mac = 5;

        // destination ip address
        string destination_ip = 6;

        // Protocol 
        enum Proto {
            NONE = 0;
            TCP = 1;
            UDP = 2;
        }

        Proto protocol = 7;

        // Application Port 
        uint32 port = 8;
    }
    // Sase Rule Match condition
    Match match = 4;

    // Sase Rule action
    enum Action {
        NONE = 0;
        DENY = 1;
        PERMIT = 2;
        SNAT = 3;
        DNAT = 4;
        FORWARD = 5;
        SECURE = 6;
    }
    // Sase Rule action
    Action action = 5;
}
